--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div class="content">
-            <h1 class="intro">Hello World!</h1>
-            <p class="subtitle">Welcome to my personal website</p>
+            <h1 class="intro">Hello. I'm Carolina</h1>
+            <p class="subtitle">I'm a Principal Product Designer driving innovation, and guiding teams to deliver great experiences</p>
             
             <div class="profile-photo">
                 <!-- You can replace this src with your actual photo -->
