--- a/index.html
+++ b/index.html
@@ -20,5 +20,29 @@
             <button class="contact-btn">Contact Me</button>
         </div>
     </div>
+    
+    <!-- Projects Grid Section -->
+    <div class="projects-container">
+        <div class="projects-grid">
+            <div class="project-card">
+                <img src="project1.jpg" alt="Project 1" class="project-image">
+            </div>
+            <div class="project-card">
+                <img src="project2.jpg" alt="Project 2" class="project-image">
+            </div>
+            <div class="project-card">
+                <img src="project3.jpg" alt="Project 3" class="project-image">
+            </div>
+            <div class="project-card">
+                <img src="project4.jpg" alt="Project 4" class="project-image">
+            </div>
+            <div class="project-card">
+                <img src="project5.jpg" alt="Project 5" class="project-image">
+            </div>
+            <div class="project-card">
+                <img src="project6.jpg" alt="Project 6" class="project-image">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
