--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="your-photo.jpg" alt="Carolina Munoz" class="profile-img">
             </div>
             
-            <button class="contact-btn">Contact Me</button>
+            <button class="contact-btn">About me</button>
         </div>
     </div>
     
