--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <img src="Cover+Inside.jpg" alt="Project 1" class="project-image">
             </div>
             <div class="project-card">
-                <img src="project2.jpg" alt="Project 2" class="project-image">
+                <img src="Nora.png" alt="Project 2" class="project-image">
             </div>
             <div class="project-card">
                 <img src="project3.jpg" alt="Project 3" class="project-image">
